# takeme_home

./: Dockerfile
app/: manage.py  pyproject.toml
app/pets/: models.py  serializers.py  urls.py  viewsets.py
app/pets/migrations/: 0001_initial.py
app/pets/tests/: conftest.py  test_urls.py
app/take_home/: asgi.py  settings.py  urls.py  wsgi.py
